<resources>
    <string name="app_name">DDX Progress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_want_to_log_in_as">Я хочу войти как</string>
    <string name="more_than_just_fitness">#Больше, чем фитнес</string>
    <string name="ddx_progress">DDX progress</string>
    <string name="welcome_to">Добро\nпожаловать в</string>
    <string name="start_training">Начать тренировку</string>
    <string name="authorization">Авторизация</string>
    <string name="id">id</string>
    <string name="log_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="no_account">Нет учетной записи?</string>
    <string name="create_it"><u>Создайте ее!</u></string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="address">Адрес филиала</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="log_in_exclamation"><u>Войдите!</u></string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="training">Тренировка</string>
    <string name="time">Время:</string>
    <string name="ammount_of_exercise">Кол-во упражнений:</string>
    <string name="message">Message...</string>
    <string name="done">Сделано</string>
    <string name="in_progress">В процессе</string>
    <string name="skipped">Пропущено</string>
    <string name="workouts">Тренировки</string>
    <string-array name="months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string name="add_workout"> Добавь себе <b><font color="#8774FF">тренировочку!</font></b></string>
    <string name="workout_name">Название тренировки</string>
    <string name="constructor">Конструктор</string>
    <string name="Exercises">Упражнения</string>
    <string name="sets">подходов</string>
    <string name="timesx">раз X</string>
    <string name="search">Найти</string>
    <string name="exercise_review">Обзор упражнения</string>
    <string name="muscles">Мускулы</string>
    <string name="type">Тип</string>
    <string name="difficulty">Сложность</string>
    <string name="equipment">Снаряжение</string>
    <string name="chats">Чаты</string>
    <string name="chat">Чат</string>
    <string name="schedule">Расписание</string>
    <string name="email">Почта</string>
</resources>