<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    tools:context=".ui.fragments.AuthFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/woman_standing" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        android:background="@drawable/purple_rounded_rectangle"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/authorization"
            android:textAppearance="@style/white_bold_35" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/text_field_background"
            android:hint="@string/email"
            android:paddingHorizontal="14dp"
            android:textAppearance="@style/gray_regular_20"
            android:textColorHint="@color/text_gray" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/id_field"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/text_field_background"
            android:hint="@string/id"
            android:paddingHorizontal="14dp"
            android:textAppearance="@style/gray_regular_20"
            android:textColorHint="@color/text_gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/text_field_background"
            android:hint="@string/password"
            android:paddingHorizontal="14dp"
            android:textAppearance="@style/gray_regular_20"
            android:textColorHint="@color/text_gray">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_field_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/gray_regular_20"
                android:textColorHint="@color/text_gray" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/eye_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|end"
                android:background="@null"
                android:paddingHorizontal="3dp"
                android:src="@drawable/eye_closed" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_btn"
            style="@style/rounded_purple_button"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="52dp"
            android:paddingVertical="7dp"
            android:text="@string/log_in" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/no_account_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="43dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textAppearance="@style/white_light_16" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/create_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/create_it"
                android:textAppearance="@style/white_light_16" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:alpha="0.6"
        android:text="@string/app_name"
        android:textAppearance="@style/half_transparent_white_bold_51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>