<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.WelcomeFragment">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/welcome_screen_bg"
        android:scaleType="centerCrop"
        android:clickable="true"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_begin="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/white_semibold_30"
        app:layout_constraintStart_toEndOf="@id/start_gl"
        app:layout_constraintBottom_toTopOf="@id/app_title_tv"
        android:layout_marginBottom="7dp"
        android:text="@string/welcome_to"/>

    <TextView
        android:id="@+id/app_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/start_gl"
        android:textAppearance="@style/white_black_50"
        app:layout_constraintBottom_toTopOf="@id/hashtag_tv"
        android:layout_marginBottom="7dp"
        android:text="@string/ddx_progress"/>
    <TextView
        android:id="@+id/hashtag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/more_than_just_fitness"
        app:layout_constraintStart_toEndOf="@id/start_gl"
        android:textAppearance="@style/white_semibold_30"
        android:layout_marginBottom="64dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
