<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ExerciseInfoFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/back_ic"
        android:layout_marginTop="47dp"
        android:layout_marginStart="14dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Спина"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        android:textAppearance="@style/black_semibold_20"
        android:layout_marginTop="51dp"
        app:layout_constraintEnd_toStartOf="@id/profile_image"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="47dp"
        android:src="@drawable/sample_profile_image"
        android:layout_marginEnd="23dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/exercise_name"
        tools:text="Кошачья растяжка"
        app:layout_constraintTop_toBottomOf="@id/category_name_tv"
        android:textColor="@color/main_dark_purple"
        android:textSize="30sp"
        android:fontFamily="@font/raleway_medium"
        android:layout_marginTop="35dp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/exercise_image"
        android:layout_width="317dp"
        android:background="@color/black"
        android:layout_height="185dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/back"
        app:layout_constraintTop_toBottomOf="@id/exercise_name" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_purple_rectangle_25"
        app:layout_constraintTop_toBottomOf="@id/exercise_image"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="27dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="190dp"
            android:layout_height="190dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/back_icon"
            android:alpha="0.3"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exercise_review_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_review"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/white_medium_20"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/muscle_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exercise_review_header"
            android:layout_marginTop="21dp"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"
            android:text="@string/muscles"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/muscle_header"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"
            android:text="@string/type"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/difficulty_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_header"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"
            android:text="@string/difficulty"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/equipment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficulty_header"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"
            android:text="@string/equipment"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/muscle_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:id="@+id/muscle_tv"
            tools:text="Трапеции"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/type_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:id="@+id/type_tv"
            tools:text="Базовое"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/difficulty_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:id="@+id/difficulty_tv"
            tools:text="Начинающий"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/equipment_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:id="@+id/equipment_tv"
            tools:text="Гантели"
            android:textAppearance="@style/white_medium_20"
            android:textSize="15sp"/>
        =
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>